[package]

name = "rust-ffmpeg"
version = "0.1.0"
authors = [ "mewlips@gmail.com" ]

[dependencies.avutil52]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avutil52"

[dependencies.avcodec54]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avcodec54"

[dependencies.avcodec55]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avcodec55"

[dependencies.avdevice54]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avdevice54"

[dependencies.avdevice55]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avdevice55"

[dependencies.avfilter3]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avfilter3"

[dependencies.avfilter4]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avfilter4"

[dependencies.avformat54]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avformat54"

[dependencies.avformat55]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avformat55"

[dependencies.swresample0]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "swresample0"

[dependencies.swscale2]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "scswcale2"

[[bin]]

name = "rust-ffmpeg"
