[package]

name = "avfilter3"
version = "0.1.0"
authors = [ "mewlips@gmail.com" ]

[dependencies.avutil52]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avutil52"

[dependencies.avcodec54]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avcodec54"

[[lib]]

name = "avfilter3"
