[package]

name = "avformat55"
version = "0.1.0"
authors = [ "mewlips@gmail.com" ]

[dependencies.avutil52]

git = "file:///home/mewlips/myrepo/rust-ffmpeg"
path = "avutil52"

[dependencies.avcodec55]

git = "file:///home/mewlips/myrepo/rust-ffmpeg"
path = "avcodec55"


[[lib]]

name = "avformat55"
